--- a/PendulumPoncelet/PendulumPoncelet3.tex
+++ b/PendulumPoncelet/PendulumPoncelet3.tex
@@ -9,7 +9,7 @@ We investigate the families of \emph{isochronous chords} of a pendulum motion, w
 \end{abstract}
 \maketitle
 
-Think of a simple pendulum and you probably picture a mass oscillating at the end of a string. But imagine instead a small mass sliding along a frictionless track launched from its low point with sufficient speed to repeatedly revolve around its circular path. Now construct chords around the path of this revolving pendulum that bisect the period - the pendulum should traverse the arcs subtended by each chord in half the period. One such chord is the vertical diameter. Another is horizontal. But what can we say about the other bisecting chords?
+Think of a simple pendulum and you might picture a mass oscillating at the end of a string. But imagine instead a small mass sliding along a frictionless track launched from its low point with sufficient speed to repeatedly revolve around its circular path. Now construct chords around the path that bisect the period - the pendulum should traverse the arcs subtended by each chord in half the period. One such chord is the vertical diameter. Another is horizontal. But what can we say about the other bisecting chords?
 
 Suppose, as in the exploration below, we are given the horizontal chord that bisects the period. How can we draw other bisecting chords?
 
@@ -27,7 +27,7 @@ The horizontal chord below bisects the period of a revolving pendulum. How can w
 \end{exploration}
 
 
-More generally, how can we draw other families of \emph{isochronous chords}, where the pendulum swings through the quicker arc subtended by the chords in some fixed fraction of the period?  The exploration below shows an example where we are given the horizontal chord (through $F$) that bisects the period and a horizontal chord $\overline{XY}$. How can we construct other chords in the same isochronous family as $\overline{XY}$ and what can we say about their envelope? 
+More generally, how can we draw other families of \emph{isochronous chords}, ones where the pendulum swings through the quicker arc subtended by the chords in some fixed fraction of the period?  The exploration below shows an example where we are given the horizontal chord (through $F$) that bisects the period and a horizontal chord $\overline{XY}$. How can we construct other chords in the same isochronous family as $\overline{XY}$ and what can we say about their envelope? 
 
 
 \begin{exploration}
@@ -68,7 +68,7 @@ Move the slider $\theta_1$ to change the path and slider $a$ to change the dista
 
 \end{exploration}
 
-In the example below, each chord subtends $2/5$ of the circumference in the new metric. So every path closes after five segments and forms a pentagram circumscribed about ${\cal C}_2$. More generally, when the chords subtend an arclength equal to a rational multiple $\lambda = q/p$ ($p$ and $q$ relatively prime positive integers) of the circumference, the path closes with $p$ chords and forms a $\{p/q \}$ star polygon. But when the ratio $\lambda = (\text{arclength subtended by chords : circumference})$ is irrational the path never closes.
+In the example below, each chord subtends $2/5$ of the circumference in the new metric. So each path closes with five segments and forms a pentagram circumscribed about ${\cal C}_2$. More generally, when the chords subtend an arclength equal to a rational multiple $\lambda = q/p$ ($p$ and $q$ relatively prime positive integers) of the circumference, the path closes with $p$ chords and forms a $\{p/q \}$ star polygon. But when the ratio $\lambda = (\text{arclength subtended by chords : circumference})$ is irrational the path never closes.
 
 \begin{exploration}
 \begin{onlineOnly}
