--- a/FallingSlinky/FallingSlinky.tex
+++ b/FallingSlinky/FallingSlinky.tex
@@ -100,6 +100,16 @@ In any event, drag the slider $g$ in Line 5 of the worksheet below from $g=0$ to
 
 \begin{onlineOnly}
     \begin{center}
+\desmos{7kykohyoic}{450}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/7kykohyoic}{Hanging Spring 24}
+
+
+
+\begin{onlineOnly}
+    \begin{center}
 \desmos{vjjibjkdrz}{450}{600}  %qvk0mzy26u
 \end{center}
 \end{onlineOnly}
