--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -28,5 +28,6 @@ started with Ximera for course instructors.
 \activity{DopplerEffect/DopplerEffect}
 \activity{Hodograph/Hodograph}
 \activity{FallingSlinky/FallingSlinky}
+\activity{LimaconCycloid/LimaconCycloid}
 
 \end{document}
