--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -12,11 +12,11 @@ Relationship between their arclengths.
 
 \begin{onlineOnly}
     \begin{center}
-\desmosThreeD{pcav8vrwva}{900}{600}
+\desmos{bpvuhnhi35}{900}{600}
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/3d/pcav8vrwva}{163: Closest Point on a Line 2}
+\href{https://www.desmos.com/calculator/bpvuhnhi35}{163: Limacon Cylcoid Arclength 2}
 
 
 \end{document}
