--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -18,5 +18,25 @@ Relationship between their arclengths.
 
 \href{https://www.desmos.com/calculator/bpvuhnhi35}{163: Limacon Cylcoid Arclength 2}
 
+As a circle ${\cal C}$ of radius $a$ rolls on the $x$-axis, a fixed point in the reference frame of ${\cal C}$ and $b>a$ units from its center sweeps out the limacon of Figure 1.
+ 
+A fixed point on the same circle ${\cal C}$ traces the cycloid in Figure 1.
+
+Let $s_1$ be the arclength of the portion of the limacon above the $x$-axis between inclination angles $0$ and $\phi$. Let $s_2$ be the arclength of the portion of the limacon below the axis between the same inclination angles. And let $s_3$ be the arclength of the cycoid between these inclination angles.
+
+
+Theorem: $s_1 - s_2 = s_3$.
+
+Our proof of the theorem is geometric.
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{hckgktfx4p}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/hckgktfx4p}{163: Limacon Cylcoid Arclength 3}
+
+
 
 \end{document}
