--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -33,7 +33,7 @@ above the $x$-axis exceeds its length below by an amount equal to the length $8a
 
 The purpose of this note is to give a geometric proof of this fact.
 
-A first step in this direction was to look for a more general equality of arclengths by associating each point of the limacon above the $x$-axis with a point below. One choice was to pair points with same inclination angle and experiments with desmos suggested that the same equality of arclengths holds between any two inclination angles.
+Our first step in this direction was to look for a more general equality of arclengths by associating each point of the limacon above the $x$-axis with a point below. One choice was to pair points with same inclination angle and experiments with desmos suggested that the same equality of arclengths holds between any two inclination angles.
 
 In the figure below, for example, the difference $s_1 - s_2$ in the arclengths $A_1P_1$ and $A_2P_2$ in the limacon between indclination angles $0$ and $\phi$ equals the arclength $s_3$ of the cycloid between these same angles. 
 
@@ -45,7 +45,7 @@ In the figure below, for example, the difference $s_1 - s_2$ in the arclengths $
 
 \href{https://www.desmos.com/calculator/bpvuhnhi35}{163: Limacon Cylcoid Arclength 2}
 
-Trying to prove this more general result worked to our advantage as its shifted a global focus (proving an equality of integrals) to  a local one (proving an equality of \emph{differential} arclengths). %This worked to our advantage.
+Trying to prove this more general result worked to our advantage as its shifted our focus from a global one (proving an equality of integrals) to  a local one (proving an equality of \emph{differential} arclengths). %This worked to our advantage.
 
 \begin{theorem9}
 With $s_1$, $s_2$ the respective arclengths of the limacon (\ref{Eq:Limacon}) above and below the $x$-axis between inclination angles $0$, and $\phi$ and $s_3$ the arclength of the cycloid (\ref{Eq:Cycloid}) between these same angles,
@@ -55,8 +55,21 @@ s_1 - s_2 = s_3.
 \end{theorem9}
 
 
+\section{Center of Rotation}
+
+
+\section{A Proof of the Theorem}
+
 \begin{proof}
-Figure 3 shows three copies of a circle ${\cal C}$ of radius $a$ rolling along the $x$-axis. The top two show the upper and lower arcs of the limacon traced by the respective points $P_1$ and $P_2$ (each attahed to a circle of radius $b$ rolling with ${\cal C}$) as ${\cal C}$ turns through the respective angles $\theta_1$ (measured from the upward pointing vertical) and $\theta_2$ (measured from the downward-pointing vertical). The lower shows the corresponding arc of the cycloid traced by $P_3$ as ${\cal C}$ turns though the angle $\theta_3$.
+Figure 3 shows three copies of a circle ${\cal C}$ of radius $a$ rolling along the $x$-axis. The top show the upper and lower arcs of the limacon traced by the respective points $P_1$ and $P_2$ (each attahed to a circle of radius $b$ rolling with ${\cal C}$) as ${\cal C}$ turns through the respective angles $\theta_1$ (measured from the upward pointing vertical) and $\theta_2$ (measured from the downward-pointing vertical). The lower shows the corresponding arc of the cycloid traced by $P_3$ as ${\cal C}$ turns though the angle $\theta_3$.
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{hckgktfx4p}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/hckgktfx4p}{163: Limacon Cylcoid Arclength 3}
 
 We regard the corresponding arclengths $s_1$, $s_2$, $s_3$ and rotation angles $\theta_i$ as functions of the common inclination angle $\phi$ of the curves at $P_1$, $P_2$, and $P_3$. Our aim is to relate the differential arclengths $ds_i$ and the differential angles of rotation $\theta_i$ to the differential change $d\phi$ in the inclination angle.
  
@@ -74,14 +87,19 @@ Let $s_1$ be the arclength $A_1P_1$ of the limacon above the $x$-axis between in
 
 Imagine three copies of ${\cal C}$ rolling along the $x$-axis as illustrated below.
 
+\end{proof}
+
+\section{Nephroid}
+
 \begin{onlineOnly}
     \begin{center}
-\desmos{hckgktfx4p}{900}{600}
+\desmos{sgpsbfqdze}{900}{600}
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/hckgktfx4p}{163: Limacon Cylcoid Arclength 3}
+\href{https://www.desmos.com/calculator/sgpsbfqdze}{163: Epicycloids 4 Neprhoid}
 
-\end{proof}
+
+\section{Ellipses}
 
 \end{document}
