--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -27,7 +27,7 @@ above the $x$-axis exceeds its length below by an amount equal to the length $8a
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/6de49gy5g8}{163: Limacon Cylcoid Arclength 1}
+\href{https://www.desmos.com/calculator/6de49gy5g8}{ Limacon Cylcoid Arclength 1}
 
 %The surprise is that that difference is independent of the size of the loop.
 
@@ -69,7 +69,7 @@ Figure 3 shows three copies of a circle ${\cal C}$ of radius $a$ rolling along t
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/hckgktfx4p}{163: Limacon Cylcoid Arclength 3}
+\href{https://www.desmos.com/calculator/hckgktfx4p}{Limacon Cylcoid Arclength 3}
 
 We regard the corresponding arclengths $s_1$, $s_2$, $s_3$ and rotation angles $\theta_i$ as functions of the common inclination angle $\phi$ of the curves at $P_1$, $P_2$, and $P_3$. Our aim is to relate the differential arclengths $ds_i$ and the differential angles of rotation $\theta_i$ to the differential change $d\phi$ in the inclination angle.
  
@@ -97,7 +97,17 @@ Imagine three copies of ${\cal C}$ rolling along the $x$-axis as illustrated bel
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/sgpsbfqdze}{163: Epicycloids 4 Neprhoid}
+\href{https://www.desmos.com/calculator/sgpsbfqdze}{Epicycloids 4 Neprhoid}
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{v9bsdhviwh}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/v9bsdhviwh}{Epicycloids 4 Neprhoid 2}
+
+
 
 
 \section{Ellipses}
