--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -93,6 +93,16 @@ Imagine three copies of ${\cal C}$ rolling along the $x$-axis as illustrated bel
 
 \begin{onlineOnly}
     \begin{center}
+\desmos{hw0lkueztk}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/hw0lkueztk}{Limacon Cycloid Arclength 3}
+
+
+
+\begin{onlineOnly}
+    \begin{center}
 \desmos{sgpsbfqdze}{900}{600}
 \end{center}
 \end{onlineOnly}
