--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -31,9 +31,9 @@ above the $x$-axis exceeds its length below by an amount equal to the length $8a
 
 %The surprise is that that difference is independent of the size of the loop.
 
-The purpose of this note is to give a geometric proof of this fact.
+The purpose of this note is to give a geometric proof of this fact and put some of ??'s other observations in a broader context.
 
-Our first step in this direction was to look for a more general equality of arclengths by associating each point of the limacon above the $x$-axis with a point below. One choice was to pair points with same inclination angle and experiments with desmos suggested that the same equality of arclengths holds between any two inclination angles.
+Our first step in this direction was to look for a more general equality of arclengths by associating each point of the limacon above the $x$-axis with a point below. It seemed like the only choice was to pair points with same inclination angle and experiments with desmos suggested that the same equality of arclengths holds between any two inclination angles.
 
 In the figure below, for example, the difference $s_1 - s_2$ in the arclengths $A_1P_1$ and $A_2P_2$ in the limacon between indclination angles $0$ and $\phi$ equals the arclength $s_3$ of the cycloid between these same angles. 
 
@@ -61,7 +61,9 @@ s_1 - s_2 = s_3.
 \section{A Proof of the Theorem}
 
 \begin{proof}
-Figure 3 shows three copies of a circle ${\cal C}$ of radius $a$ rolling along the $x$-axis. The top show the upper and lower arcs of the limacon traced by the respective points $P_1$ and $P_2$ (each attahed to a circle of radius $b$ rolling with ${\cal C}$) as ${\cal C}$ turns through the respective angles $\theta_1$ (measured from the upward pointing vertical) and $\theta_2$ (measured from the downward-pointing vertical). The lower shows the corresponding arc of the cycloid traced by $P_3$ as ${\cal C}$ turns though the angle $\theta_3$.
+Figure 3 shows three copies of a circle ${\cal C}$ of radius $a$ rolling along the $x$-axis. The top two show points $P_1$ and $P_2$ (each attached to a circle of radius $b$ rolling with ${\cal C}$) sweeping out the upper and lower arcs of the limacon as the circles turn through the respective angles $\theta_1$ (measured from the upward-pointing vertical) and $\theta_2$ (measured from the downward vertical). The lower shows the corresponding arc of the cycloid traced by $P_3$ as ${\cal C}$ turns though the angle $\theta_3$.
+
+%show points $P the upper and lower arcs of the limacon traced by the respective points $P_1$ and $P_2$ (each attached to a circle of radius $b$ rolling with ${\cal C}$) as ${\cal C}$ turns through the respective angles $\theta_1$ (measured from the upward pointing vertical) and $\theta_2$ (measured from the downward-pointing vertical). The lower shows the corresponding arc of the cycloid traced by $P_3$ as ${\cal C}$ turns though the angle $\theta_3$.
 
 \begin{onlineOnly}
     \begin{center}
@@ -72,6 +74,26 @@ Figure 3 shows three copies of a circle ${\cal C}$ of radius $a$ rolling along t
 \href{https://www.desmos.com/calculator/hckgktfx4p}{Limacon Cylcoid Arclength 3}
 
 We regard the corresponding arclengths $s_1$, $s_2$, $s_3$ and rotation angles $\theta_i$ as functions of the common inclination angle $\phi$ of the curves at $P_1$, $P_2$, and $P_3$. Our aim is to relate the differential arclengths $ds_i$ and the differential angles of rotation $\theta_i$ to the differential change $d\phi$ in the inclination angle.
+
+There are three key points.
+\begin{enumerate}
+\item $ds_i = \rho_i \, d\theta_i$ ,
+
+\item $\theta_1 + \theta_2 = \theta_3$, and
+
+\item $\frac{d\theta_1}{d\theta_2} = \frac{\rho_1}{\rho_2}$.
+\end{enumerate}
+
+Accepting these for the moment proves our theorem. For then
+\begin{align*}
+     ds_1 - ds_2 &= \rho_1 \, d\theta_1 - \rho_2 \, d\theta_2 \\
+                       &= (\rho_3 + \rho_2) \, d\theta_1 - (\rho_1 - \rho_3)\, d\theta_2 \\
+                       &= \rho_3 (d\theta_1 + d\theta_2) + (\rho_2 \, d\theta_1 - \rho_1\, d\theta_2) \\
+                       &= \rho_3 \, d\theta_3 \\
+                       &= ds_3 .
+\end{align*}
+
+
  
 Then it suffices to show that as the inclination angle  the circles 
 
@@ -121,5 +143,27 @@ Imagine three copies of ${\cal C}$ rolling along the $x$-axis as illustrated bel
 
 
 \section{Ellipses}
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{yzuot0hbvv}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/yzuot0hbvv}{Epicycloids 3 Ellipse}
+
+yzuot0hbvv
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{yfoczp8y2g}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/yfoczp8y2g}{Wrapping Cycloids Around Circles}
+
+
+
 
 \end{document}
