--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -12,22 +12,22 @@ Relationship between their arclengths.
 \maketitle
  
 
-In a recent article, ?? made the surprising observation that the length of the trochoid
+In a recent article, D. Robinson made the surprisingly delightful observation that the length of the trochoid
 \begin{equation} 
-    (x,y) = (a\theta + b\sin\theta , a + b\cos\theta) \, , \, 0\leq \theta \leq 2\pi , \label{Eq:Limacon}
+    (x,y) = (a\theta + b\sin\theta , a + b\cos\theta) \, , \, -\pi\leq \theta \leq \pi , \label{Eq:Limacon}
 \end{equation}
 above the $x$-axis exceeds its length below by an amount equal to the length $8a$ of the cycloid
 \begin{equation}
-    (x,y) = ( a\theta + a\sin\theta , a + a\cos\theta ) \, , \, 0\leq \theta \leq 2\pi . \label{Eq:Cycloid}
+    (x,y) = ( a\theta + a\sin\theta , a + a\cos\theta ) \, , \, -\pi\leq \theta \leq \pi . \label{Eq:Cycloid}
 \end{equation}
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{6de49gy5g8}{900}{600}
+\desmos{ty0hdz7uyj}{900}{600}
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/6de49gy5g8}{ Limacon Cylcoid Arclength 1}
+\href{https://www.desmos.com/calculator/ty0hdz7uyj}{Limacon Cylcoid Arclength 1B}
 
 %The surprise is that that difference is independent of the size of the loop.
 
@@ -110,6 +110,19 @@ Let $s_1$ be the arclength $A_1P_1$ of the limacon above the $x$-axis between in
 Imagine three copies of ${\cal C}$ rolling along the $x$-axis as illustrated below.
 
 \end{proof}
+
+\section{Limacons}
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{kuhagddz3r}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/kuhagddz3r}{Wrapping Cycloids around Circles Limacon}
+
+
 
 \section{Nephroid}
 
