--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -31,7 +31,7 @@ above the $x$-axis exceeds its length below by an amount equal to the length $8a
 
 %The surprise is that that difference is independent of the size of the loop.
 
-The purpose of this note is to give a geometric proof of this fact and put some of ??'s other observations in a broader context.
+The purpose of this note is to give a geometric proof of this fact and view some of Robinson's other observations in a broader context.
 
 Our first step in this direction was to look for a more general equality of arclengths by associating each point of the limacon above the $x$-axis with a point below. It seemed like the only choice was to pair points with same inclination angle and experiments with desmos suggested that the same equality of arclengths holds between any two inclination angles.
 
@@ -39,11 +39,13 @@ In the figure below, for example, the difference $s_1 - s_2$ in the arclengths $
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{bpvuhnhi35}{900}{600}
+\desmos{0vodc6gvp5}{900}{600}   %bpvuhnhi35
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/bpvuhnhi35}{163: Limacon Cylcoid Arclength 2}
+\href{https://www.desmos.com/calculator/0vodc6gvp5}{Limacon Cylcoid Arclength 2B}
+
+
 
 Trying to prove this more general result worked to our advantage as its shifted our focus from a global one (proving an equality of integrals) to  a local one (proving an equality of \emph{differential} arclengths). %This worked to our advantage.
 
