--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -56,6 +56,7 @@ s_1 - s_2 = s_3.
 \]
 \end{theorem9}
 
+Our proof of this theorem relies partly on the instantaneous center of rotation. Readers familiar with this idea should feel free to skip the next section and move directly to the proof.
 
 \section{Center of Rotation}
 
@@ -172,13 +173,13 @@ yzuot0hbvv
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{yfoczp8y2g}{900}{600}
+\desmos{yillqxp8mg}{900}{600}   %yfoczp8y2g
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/yfoczp8y2g}{Wrapping Cycloids Around Circles}
+\href{https://www.desmos.com/calculator/yillqxp8mg}{Wrapping Cycloids Around Circles Ellipse 2B}
 
-
+yillqxp8mg
 
 
 \end{document}
