--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -12,7 +12,7 @@ Relationship between their arclengths.
 \maketitle
  
 
-In a recent article, D. Robinson made the surprisingly delightful observation that the length of the trochoid
+In a recent article, D. Robinson made the surprising observation that the length of the trochoid
 \begin{equation} 
     (x,y) = (a\theta + b\sin\theta , a + b\cos\theta) \, , \, -\pi\leq \theta \leq \pi , \label{Eq:Limacon}
 \end{equation}
@@ -64,17 +64,51 @@ Our proof of this theorem relies partly on the instantaneous center of rotation.
 \section{A Proof of the Theorem}
 
 \begin{proof}
-Figure 3 shows three copies of a circle ${\cal C}$ of radius $a$ rolling along the $x$-axis. The top two show points $P_1$ and $P_2$ (each attached to a circle of radius $b$ rolling with ${\cal C}$) sweeping out the upper and lower arcs of the limacon as the circles turn through the respective angles $\theta_1$ (measured from the upward-pointing vertical) and $\theta_2$ (measured from the downward vertical). The lower shows the corresponding arc of the cycloid traced by $P_3$ as ${\cal C}$ turns though the angle $\theta_3$.
 
-%show points $P the upper and lower arcs of the limacon traced by the respective points $P_1$ and $P_2$ (each attached to a circle of radius $b$ rolling with ${\cal C}$) as ${\cal C}$ turns through the respective angles $\theta_1$ (measured from the upward pointing vertical) and $\theta_2$ (measured from the downward-pointing vertical). The lower shows the corresponding arc of the cycloid traced by $P_3$ as ${\cal C}$ turns though the angle $\theta_3$.
+It suffices to show
+\[
+      ds_1 - ds_2 = ds_3 ,
+\]
+where  $ds_i$ are the differential arclengths along the curves (respectively the upper limacon, the lower limacon, and the cycloid) between inclination angles $\phi$ and $\phi + d\phi$. 
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{hckgktfx4p}{900}{600}
+\desmos{snq3rgm0a4}{900}{600}   %hckgktfx4p
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/hckgktfx4p}{Limacon Cylcoid Arclength 3}
+\href{https://www.desmos.com/calculator/snq3rgm0a4}{Limacon Cylcoid Arclength 3B}
+
+These arclengths in Figure 3 are at distances 
+\[
+   \rho_1 = Q_1 P_1 ,
+\]
+\[
+  \rho_2 = Q_2P_2 = Q_1R_1 ,
+\]
+and 
+\[
+   \rho_3 = Q_3P_3
+\]
+from the respective centers of rotation $Q_1$, $Q_2$, $Q_3$.
+
+I originally thought the equality of distances
+\[
+   \rho_1 - \rho_2 = \rho_3 ,
+\]
+immediately implied the equality of differential arclengths above. But this was a mistake since the circles in Figure 3 turn through different differential angles in sweeping out the differential arclengths because in sweeping out the full curves (upper, lower limacon, and cycloid) the circles turn through the unequal angles 
+\[
+      (\Delta \theta_1 = 2\pi) > (\Delta \theta_1 = 2\arccos(-a/b)) > (\Delta \theta_3 = 2\pi - 2\arccos(-a/b) ) . 
+\]
+
+
+
+%Figure 3 shows three copies of a circle ${\cal C}$ of radius $a$ rolling along the $x$-axis. The top two show points $P_1$ and $P_2$ (each attached to a circle of radius $b$ rolling with ${\cal C}$) sweeping out the upper and lower arcs of the limacon as the circles turn through the respective angles $\theta_1$ (measured from the upward-pointing vertical) and $\theta_2$ (measured from the downward vertical). The lower shows the corresponding arc of the cycloid traced by $P_3$ as ${\cal C}$ turns though the angle $\theta_3$.
+
+%%show points $P the upper and lower arcs of the limacon traced by the respective points $P_1$ and $P_2$ (each attached to a circle of radius $b$ rolling with ${\cal C}$) as ${\cal C}$ turns through the respective angles $\theta_1$ (measured from the upward pointing vertical) and $\theta_2$ (measured from the downward-pointing vertical). The lower shows the corresponding arc of the cycloid traced by $P_3$ as ${\cal C}$ turns though the angle $\theta_3$.
+
+
+
 
 We regard the corresponding arclengths $s_1$, $s_2$, $s_3$ and rotation angles $\theta_i$ as functions of the common inclination angle $\phi$ of the curves at $P_1$, $P_2$, and $P_3$. Our aim is to relate the differential arclengths $ds_i$ and the differential angles of rotation $\theta_i$ to the differential change $d\phi$ in the inclination angle.
 
