--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -3,7 +3,7 @@
 
 \newcommand{\pskip}{\vskip 0.1 in}
 
-\newtheorem*{theorem9}{Theorem}
+\newtheorem{theorem9}{Theorem}
 
 \begin{document}
 \begin{abstract}
@@ -92,15 +92,19 @@ and
 \]
 from the respective centers of rotation $Q_1$, $Q_2$, $Q_3$.
 
-I originally thought the equality of distances
+It would be a mistake (one that I made) to think the equality of distances
 \[
    \rho_1 - \rho_2 = \rho_3 ,
 \]
-immediately implied the equality of differential arclengths above. But this was a mistake since the circles in Figure 3 turn through different differential angles in sweeping out the differential arclengths because in sweeping out the full curves (upper, lower limacon, and cycloid) the circles turn through the unequal angles 
+implied the equality of differential arclengths above. But since the circles in Figure 3 turn through different differential angles in sweeping out the differential arclengths because in sweeping out the full curves (upper, lower limacon, and cycloid) the circles turn through the unequal angles 
 \[
       (\Delta \theta_1 = 2\pi) > (\Delta \theta_1 = 2\arccos(-a/b)) > (\Delta \theta_3 = 2\pi - 2\arccos(-a/b) ) . 
 \]
-
+So the correpsonding differential angles $d\theta_i$ are generally not equal and we need to find some relationships among them to show the equality
+\[
+       \rho_1 \, d\theta_1 - \rho_2 \, d\theta_2 = \rho_3 \, d\theta_3
+\]
+of differential arclengths.
 
 
 %Figure 3 shows three copies of a circle ${\cal C}$ of radius $a$ rolling along the $x$-axis. The top two show points $P_1$ and $P_2$ (each attached to a circle of radius $b$ rolling with ${\cal C}$) sweeping out the upper and lower arcs of the limacon as the circles turn through the respective angles $\theta_1$ (measured from the upward-pointing vertical) and $\theta_2$ (measured from the downward vertical). The lower shows the corresponding arc of the cycloid traced by $P_3$ as ${\cal C}$ turns though the angle $\theta_3$.
@@ -110,18 +114,18 @@ immediately implied the equality of differential arclengths above. But this was 
 
 
 
-We regard the corresponding arclengths $s_1$, $s_2$, $s_3$ and rotation angles $\theta_i$ as functions of the common inclination angle $\phi$ of the curves at $P_1$, $P_2$, and $P_3$. Our aim is to relate the differential arclengths $ds_i$ and the differential angles of rotation $\theta_i$ to the differential change $d\phi$ in the inclination angle.
+%We regard the corresponding arclengths $s_1$, $s_2$, $s_3$ and rotation angles $\theta_i$ as functions of the common inclination angle $\phi$ of the curves at $P_1$, $P_2$, and $P_3$. Our aim is to relate the differential arclengths $ds_i$ and the differential angles of rotation $\theta_i$ to the differential change $d\phi$ in the inclination angle.
 
-There are three key points.
+It turns out that we just need  two facts:
 \begin{enumerate}
-\item $ds_i = \rho_i \, d\theta_i$ ,
+% \item $ds_i = \rho_i \, d\theta_i$ ,
 
 \item $\theta_1 + \theta_2 = \theta_3$, and
 
 \item $\frac{d\theta_1}{d\theta_2} = \frac{\rho_1}{\rho_2}$.
 \end{enumerate}
 
-Accepting these for the moment proves our theorem. For then
+These are enough to prove Theorem 1. For then
 \begin{align*}
      ds_1 - ds_2 &= \rho_1 \, d\theta_1 - \rho_2 \, d\theta_2 \\
                        &= (\rho_3 + \rho_2) \, d\theta_1 - (\rho_1 - \rho_3)\, d\theta_2 \\
@@ -129,6 +133,17 @@ Accepting these for the moment proves our theorem. For then
                        &= \rho_3 \, d\theta_3 \\
                        &= ds_3 .
 \end{align*}
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{txbihum5r3}{900}{600}   
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/txbihum5r3}{Cylcoids Proof of Theorem 1}
+
+
 
 
  
