--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -74,11 +74,11 @@ where  $ds_i$ are the differential arclengths along the curves between inclinati
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{snq3rgm0a4}{900}{600}   %hckgktfx4p
+\desmos{qtse3eivit}{900}{600}   %snq3rgm0a4
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/snq3rgm0a4}{Limacon Cylcoid Arclength 3B}
+\href{https://www.desmos.com/calculator/qtse3eivit}{Limacon Cylcoid Arclength 3C}
 
 These arclengths are at distances 
 \[
