--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -58,10 +58,32 @@ s_1 - s_2 = s_3.
 
 Our proof of this theorem relies partly on the instantaneous center of rotation. Readers familiar with this idea should feel free to skip the next section and move directly to the proof.
 
-\section{Center of Rotation}
+\section{Preliminaries}
+It might seem counterintuitive that at any moment a rolling wheel is rotating not about its axle but rather about its point of contact with the ground. This statement has two implications for a point $P$ at rest in the reference frame of the rolling wheel, like a pebble stuck in a tire.
+
+\begin{enumerate}
+\item The speed of $P$ is equal to the product $\rho \omega$ of the distance $PQ$ from $P$ to the point of contact and the rotation rate of the wheel.
+
+\item The velocity of $P$ is orthogonal to segment $\overline{PQ}$.
+\end{enumerate}
+
+The photograph of a rolling wheel below gives some sense of (a); points on the spokes farther from the point of contact are moving faster and the spokes blur....
 
 
-\section{A Proof of the Theorem}
+\begin{onlineOnly}
+    \begin{center}
+\desmos{ilinb0qn7q}{900}{600}   %bpvuhnhi35
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/ilinb0qn7q}{Center of Rotation}
+
+
+
+
+
+
+\section{A Proof of Theorem 1}
 
 \begin{proof}
 In proving Theorem 1, it helps to imagine three circles rolling along the $x$-axis as the points $P_i$, $i=1,2,3$ at rest in the reference frames of these circles sweep out the upper limacon, lower limacon, and cycloid. The circles start with the points $P_i$ at the same inclination angle $\phi=0$ and the segments $Q_iP_i$ vertical. And as illustrated in Figure 3, the segments $\overline{Q_iP_i}$ from the centers of rotation to the tracing points remain parallel.
